# spacehustler

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile.ini  README.md  astyle-options.txt  astyle.py  build.sh  call-clang-format.py  check-doxygen-xml.py  code-stat-everything.txt  code-stat-input.txt  cpplint.py  debug.sh  euphoria-config-in.h  generate-dot-from-doxygen.py  gui-system.md  inputsystem-overview.gv  install-deps.sh  luadocgen.py  run.sh
cmake-modules/: FindAssImp.cmake  FindBullet.cmake  FindGoogleMock.cmake  FindGoogleMock2.cmake  FindPhysFS.cmake  FindSDL2.cmake  FindSFML.cmake  FindwxW.cmake
entity-system-template/: entity-template.cc  entity-template.h
euphoria/: CMakeLists.txt  LibOVR.cmake  angle.cc  angle.h  axis.cc  axis.h  bitmap.cpp  bitmap.h  cache.h  camera.cc  camera.cpp  camera.h  color.cc  color.cpp  color.h  colors.cc  colors.cpp  colors.h  debugrenderer.cc  debugrenderer.cpp  debugrenderer.h  doxygen.h  dynamicquad.cc  dynamicquad.h  entity-camera.cc  entity-camera.cpp  entity-camera.h  entity-name.cc  entity-name.h  entity-physics.cc  entity-physics.cpp  entity-physics.h  entity-player.cc  entity-player.h  entity-rendering.cc  entity-rendering.cpp  entity-rendering.h  entity-script.cc  entity-script.cpp  entity-script.h  (+247 more)
euphoria/graphics/: camera.cc  camera.h  debugrenderer.cc  debugrenderer.h  dynamicquad.cc  dynamicquad.h  fbo.cc  fbo.h  mesh-load.cc  mesh.cc  mesh.h  ninepatch.cc  ninepatch.h  oculusvr.cc  oculusvr.h  ogldebug.cc  ogldebug.h  opengl.h  openglraii.cc  openglraii.h  quad.cc  quad.h  shader-load.cc  shader.cc  shader.h  shadercache.cc  shadercache.h  texture.cc  texture.h  texturecache.cc  texturecache.h  tweakrenderer.cc  tweakrenderer.h  world.cc  world.h
euphoria/main/: main-sdl2.cc  main-sfml.cc
euphoria/old/: input-bindlist.cc
examples/: Systems.js  actions.js  debuglines.frag  debuglines.js  debuglines.vert  default.frag  default.js  default.vert  entities.js  entity.js  fighter1.mtl  hud.js  keys.js  main.lua  nooculus.frag  nooculus.js  nooculus.vert  oculus-chromatic-fix.frag  oculus.frag  oculus.js  oculus.vert  pb-horizontal-blue.js  pb-horizontal-green.js  pb-horizontal-red.js  pb-horizontal-white.js  pb-horizontal-yellow.js  players.js  progressbar.js  settings.js  ship.mtl  ship.wings  systemdefs.js  test.lua  thirdperson.lua  world.dae  world.js  world.mtl  world.wings
examples/cursors/: readme.md
legacy/: colors.cc
luadoc/: Physics.md  index.md  module_Entity.md  module_Game.md  module_Json.md  module_Physics.md  module_cquat.md  module_cvec3.md  module_quat.md  module_vec3.md  modules.md  type_quat.md  type_vec3.md
md/: todo.md
src/: CMakeLists.txt  bitmap.cpp  bitmap.h  color.cpp  color.h  main.cpp  mesh.cpp  mesh.h  ogldebug.cpp  ogldebug.h  rng.cpp  rng.h  shader.cpp  shader.h  texture.cpp  texture.h
